# visualization-covid-pl

./: .editorconfig  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
components/common/: footer.tsx  header.tsx  layout.tsx  metadataProvider.tsx
components/viewDialog/: dialogsMenu.tsx  regionChartDialog.tsx  summaryChartDialog.tsx  summaryTableDialog.tsx  viewForm.tsx
components/visualization/: controllerPopover.tsx  regionChart.tsx  summaryChart.tsx  summaryTable.tsx  visualizationController.tsx
components/workspace/: workspace.tsx  workspaceCard.tsx  workspaceView.tsx  workspaceViewDialog.tsx
pages/: _app.tsx  _document.tsx  about.tsx  index.tsx
pages/api/: data.ts
scripts/: __main__.py  api.py  cli.py  utils.py
src/common/: metadataContext.ts  store.ts
src/common/components/: header.tsx  metadataProvider.tsx
src/common/functions/: getData.ts  getInput.ts
src/common/hooks/: useMetadata.ts
src/common/types/: types.ts
src/middleware/: database.ts
src/pages/: _app.tsx  about.tsx  index.tsx
src/themes/: theme.ts
src/visualization/: functions.ts  selectors.ts  types.ts
src/workspace/: functions.ts  selectors.ts  slice.ts  types.ts
utils/common/: descriptions.ts  getData.ts  getInput.ts  getMetadata.ts  input.ts  metadataContext.ts  recordMappers.ts  sources.ts  types.ts  useMetadata.ts
utils/loader/: loadSpreadsheet.ts  types.ts
utils/store/: index.ts
utils/visualization/: functions.ts  selectors.ts  slice.ts  types.ts
utils/workspace/: selectors.ts  slice.ts  types.ts
(+24 files in other folders)
