[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["wojciech <w.malarski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
click = "^7.1.2"
xlrd = "^1.2.0"
pymongo = {extras = ["tls"], version = "^3.11.0"}
python-dotenv = "^0.15.0"
dnspython = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
